--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "description": "",
   "devDependencies": {
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@types/node": "^22.7.5",
+    "http-server": "^14.1.1"
   }
 }
