--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "backend": "ts-node ./src/backend/server.ts",
+    "frontend": "http-server ./src/frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,10 +13,8 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.7.5",
+    "http-server": "^14.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "http-server": "^14.1.1"
   }
 }
