--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "lite-server": "^2.6.1",
+    "http-server": "^14.1.1",
     "typescript": "^5.6.3"
   }
 }
